--- a/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
@@ -3,20 +3,22 @@
         <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" class="ce-site-header__search-icon-search" aria-hidden="true" focusable="false"/>
         <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/x-circle.svg" class="ce-site-header__search-icon-close" aria-hidden="true" focusable="false"/>
     </a>
-    <div class="ce-site-header__search-field collapse search-collapse {f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')}" id="search__main-navigation-search" aria-labelledby="search-toggle-btn">
-        <div class="tx-indexedsearch-searchbox">
-            <f:form pageUid="{settings.targetPid}" method="post" absolute="0" action="search" extensionName="IndexedSearch" pluginName="pi2" controller="Search">
-                <div class="input-group d-flex">
-                    <div class="main-navigation__search-box js__main-navigation__search-box d-flex w-100">
-                        <div class="awesomplete d-flex w-100">
-                            <f:form.textfield name="search[sword]" class="header-middle__search-input ce-site-header__search-field-input" />
+    <div class="ce-site-header__search-field-wrp collapse search-collapse" id="search__main-navigation-search" aria-labelledby="search-toggle-btn">
+        <div class="ce-site-header__search-field {f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')}">
+            <div class="tx-indexedsearch-searchbox ce-site-header__search-field-content">
+                <f:form pageUid="{settings.targetPid}" method="post" absolute="0" action="search" extensionName="IndexedSearch" pluginName="pi2" controller="Search">
+                    <div class="input-group d-flex">
+                        <div class="main-navigation__search-box js__main-navigation__search-box d-flex w-100">
+                            <div class="awesomplete d-flex w-100">
+                                <f:form.textfield name="search[sword]" class="header-middle__search-input ce-site-header__search-field-input" />
+                            </div>
+                        </div>
+                        <div class="main-navigation__search-btn-wrp">
+                            <a class="main-navigation__search-btn js__main-navigation__search-btn btn btn-light" href="#"><t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/></a>
                         </div>
                     </div>
-                    <div class="main-navigation__search-btn-wrp">
-                        <a class="main-navigation__search-btn js__main-navigation__search-btn btn btn-light" href="#"><t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/></a>
-                    </div>
-                </div>
-            </f:form>
+                </f:form>
+            </div>
         </div>
     </div>
 </div>
