--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -23,9 +23,9 @@
 
             <f:if condition="{flexform.header_top_lang_menu}">
               <div class="ce-site-header__top-langmenu-wrp navbar">
-                <ul class="ce-site-header__top-langmenu dropdown">
+                <div class="ce-site-header__top-langmenu dropdown">
                   <f:render section="langmenu" arguments="{_all}" />
-                </ul>
+                </div>
               </div>
             </f:if>
 
@@ -108,9 +108,9 @@
 
             <f:if condition="{flexform.main_nav_lang_menu}">
               <div class="ce-site-header__langmenu-wrp {flexform.main_nav_mobile_search_position}">
-                <ul class="ce-site-header__langmenu">
+                <div class="ce-site-header__langmenu">
                   <f:render section="langmenu" arguments="{_all}" />
-                </ul>
+                </div>
               </div>
             </f:if>
             <f:if condition="{flexform.main_nav_search}">
@@ -150,7 +150,6 @@
 
 <f:comment>Lang menu section</f:comment>
 <f:section name="langmenu">
-      <li>
         <f:for each="{languageNavigation}" as="language">
           <f:if condition="{language.active}">
             <a class="header__language-menu-link dropdown-toggle main-navigation__item-link" href="#"
@@ -161,21 +160,24 @@
             </a>
           </f:if>
         </f:for>
-        <ul class="header__language-menu-box dropdown-menu {f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')}">
-          <f:for each="{languageNavigation}" as="language">
-            <f:if condition="{language.active} == 0">
-                <li>
-                  <f:if condition="{language.link}">
-                      <a href="{language.link}" class="header__language-menu-box-item{f:if(condition: language.active, then: ' active')}">
-                        <span class="flag-icon icon-{language.flag}"></span>
-                        {language.navigationTitle}
-                      </a>
-                  </f:if>
-                </li>
-            </f:if>
-          </f:for>
-        </ul>
-      </li>
+        <div class="header__language-menu-box dropdown-menu">
+          <div class="header__language-menu-box-content {f:if(condition: flexform.main_nav_full_width, then: 'container-fluid', else: 'container')}">
+            <ul class="header__language-menu-box-content-list">
+              <f:for each="{languageNavigation}" as="language">
+                <f:if condition="{language.active} == 0">
+                    <li>
+                      <f:if condition="{language.link}">
+                          <a href="{language.link}" class="header__language-menu-box-item{f:if(condition: language.active, then: ' active')}">
+                            <span class="flag-icon icon-{language.flag}"></span>
+                            {language.navigationTitle}
+                          </a>
+                      </f:if>
+                    </li>
+                </f:if>
+              </f:for>
+            </ul>
+          </div>
+        </div>
 </f:section>
 
 <f:comment>======== Main navigation dropdown ========</f:comment>
@@ -239,11 +241,16 @@
 
 <f:comment>======== Main navigation big menu dropdown ========</f:comment>
 <f:section name="mainNavigationBigMenuDropdown">
+  <f:variable name="breakpoint"><f:if condition="{flexform.main_nav_mobile_breakpoint} == main-navigation-expand-xxl">
+    <f:then>col-xxl-3</f:then>
+    <f:else if="{flexform.main_nav_mobile_breakpoint} == main-navigation-expand-xl">col-xl-3</f:else>
+    <f:else>col-lg-3</f:else>
+  </f:if></f:variable>
   <div class="main-navigation__dropdown-item-list dropdown-menu big-menu-dropdown
     {f:if(condition: '{navItem.data.doktype} == 1 || {navItem.data.doktype} == 3 || {navItem.data.doktype} == 9', then: ' show-parent-link')}"
     aria-labelledby="navbarDropdown{navItem.data.uid}" id="dropdown-big-menu">
 
-    <div class="{f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')} container-big-menu">
+    <div class="{f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')}">
       <f:if condition="{navItem.data.doktype} == 1 || {navItem.data.doktype} == 3 || {navItem.data.doktype} == 9">
         <div class="main-navigation__dropdown-item {f:if(condition: navItem.active, then:' active')} {navItem.data.uid}">
           <f:render section="menuLink" arguments="{item:navItem, class: 'main-navigation__dropdown-item-link main-navigation__dropdown-item-parent-link'}" />
@@ -252,11 +259,11 @@
       <div class="row">
         <f:for each="{navItem.children}" as="childItem" iteration="iteration">
           <f:if condition="{iteration.isFirst}">
-            <div class="col-lg-3">
+            <div class="{breakpoint}">
           </f:if>
           <f:if condition="{childItem.spacer}">
             <f:then>
-              </div><div class="col-lg-3">
+              </div><div class="{breakpoint}">
             </f:then>
             <f:else>
               <f:comment>Start sub menu level 2</f:comment>
@@ -265,10 +272,17 @@
 
                   <f:if condition="{childItem.data.doktype} == 1 || {childItem.data.doktype} == 9 || {childItem.data.doktype} == 3">
                     <f:then>
-                      <f:render section="menuLink" arguments="{item:childItem, class: 'main-navigation__dropdown-item-link main-navigation__big-dropdown-item-link main-navigation__dropdown-item-parent-link'}" />
+                      <f:if condition="{childItem.children}">
+                        <f:then>
+                          <f:render section="menuLink" arguments="{item:childItem, class: 'main-navigation__dropdown-item-link main-navigation__dropdown-item-parent-link-with-child'}" />
+                        </f:then>
+                        <f:else>
+                          <f:render section="menuLink" arguments="{item:childItem, class: 'main-navigation__dropdown-item-link'}" />
+                        </f:else>
+                      </f:if>
                     </f:then>
                     <f:else>
-                      <span class="main-navigation__dropdown-item-link main-navigation__big-dropdown-item-link main-navigation__dropdown-item-parent-link">{childItem.title}</span>
+                      <span class="main-navigation__dropdown-item-link main-navigation__dropdown-item-parent-link">{childItem.title}</span>
                     </f:else>
                   </f:if>
                   <f:if condition="{childItem.data.hide_subpages_in_menu} == 0 && {childItem.children}">
@@ -280,26 +294,11 @@
                   <f:comment>Start sub menu level 3</f:comment>
                   <f:if condition="{childItem.data.hide_subpages_in_menu} == 0">
                       <ul class="main-navigation__big-dropdown-item-list _sub-menu-level-3 collapse mobile-menu-links-collapse" id="child-{iteration.cycle}">
-                        <f:for each="{childItem.children}" as="childItem">
-                          <f:if condition="{childItem.children}">
-                            <f:then>
-                              <li class="main-navigation__dropdown-item {f:if(condition: childItem.active, then:' active')} {childItem.data.uid}">
-                                <a href="#"
-                                  id="navbarDropdown{navItem.data.uid}"
-                                  class="main-navigation__dropdown-item-link main-navigation__big-dropdown-item-link
-                                  {f:if(condition: childItem.children, then:' dropdown')}"
-                                  role="button"
-                                  data-bs-toggle="dropdown"
-                                  aria-expanded="false">
-                                    {childItem.title}
-                                </a>
-                              </li>
-                            </f:then>
-                            <f:else>
-                              <li class="main-navigation__dropdown-item {f:if(condition: childItem.active, then:' active')} {childItem.data.uid}">
-                                <f:render section="menuLink" arguments="{item:childItem, class: 'main-navigation__dropdown-item-link main-navigation__big-dropdown-item-link'}" />
-                              </li>
-                            </f:else>
+                        <f:for each="{childItem.children}" as="grandChildItem">
+                          <f:if condition="{grandChildItem}">
+                            <li class="main-navigation__dropdown-item {f:if(condition: grandChildItem.active, then:' active')} {grandChildItem.data.uid}">
+                              <f:render section="menuLink" arguments="{item:grandChildItem, class: 'main-navigation__dropdown-item-link main-navigation__dropdown-item-child-link'}" />
+                            </li>
                           </f:if>
                         </f:for>
                       </ul>
