[TASK] add new search button styling and its variables, change condition for shortcuts

--- a/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
@@ -14,7 +14,7 @@
                             </div>
                         </div>
                         <div class="main-navigation__search-btn-wrp">
-                            <a class="main-navigation__search-btn js__main-navigation__search-btn btn btn-light" href="#"><t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/></a>
+                            <a class="main-navigation__search-btn js__main-navigation__search-btn btn" href="#"><t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/></a>
                         </div>
                     </div>
                 </f:form>
