--- a/Resources/Private/Extensions/solr/Templates/Search/MainNavigationSearch.html
+++ b/Resources/Private/Extensions/solr/Templates/Search/MainNavigationSearch.html
@@ -23,7 +23,7 @@
 
                         <input type="text" placeholder="{f:translate(key: 'search.placeholder', extensionName: 'T3kit')}" class="tx-solr-q js-solr-q tx-solr-suggest tx-solr-suggest-focus form-control ce-site-header__search-field-input" name="{pluginNamespace}[q]" value="{q}" data-search="searchSuggest" />
                         <span class="input-group-btn">
-                            <button class="btn btn-light tx-solr-submit main-navigation__search-btn" type="submit">
+                            <button class="btn tx-solr-submit main-navigation__search-btn" type="submit">
                                 <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/>
                                 <f:comment>
                                 <span>
