--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -270,7 +270,7 @@
               <ul class="main-navigation__big-dropdown-item-list _sub-menu-level-2">
                 <li class="main-navigation__dropdown-item-wrp {f:if(condition: childItem.active, then:' active')} {childItem.data.uid}">
 
-                  <f:if condition="{childItem.data.doktype} == 1 || {childItem.data.doktype} == 9 || {childItem.data.doktype} == 3">
+                  <f:if condition="{childItem.data.doktype} == 1 || {childItem.data.doktype} == 9 || {childItem.data.doktype} == 3 || {childItem.data.doktype} == 4">
                     <f:then>
                       <f:if condition="{childItem.children}">
                         <f:then>
